made the list output into a text field and sorted the list by name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <link rel="stylesheet" href="style-mobile.css">
 </head>
 <body>
-<div class="wrapper"></div>
+<div class="wrapper">
+    <input type="text" id="name" placeholder="Name=Value">
+    <button id="send">send</button>
+    <h4>Name/ValuePairList</h4>
+    <div id="target"></div>
+    <button id="buttonSortname">Sort by Name</button>
+    <button id="buttonSortvalue">Sort by Value</button>
+    <button id="buttonDelete">Delete</button>
+
+
+</div>
 <script src="main.js"></script>
 </body>
 </html>
