--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <button id="send">send</button>
     <h4>Name/ValuePairList</h4>
     <div id="target"></div>
+<!--<ul>-->
+<!--    <li>Delete</li>-->
+<!--</ul>-->
     <button id="buttonSortname">Sort by Name</button>
     <button id="buttonSortvalue">Sort by Value</button>
     <button id="buttonDelete">Delete</button>
