--- a/index.html
+++ b/index.html
@@ -7,23 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style-desktop.css">
-    <link rel="stylesheet" href="style-tablet.css">
     <link rel="stylesheet" href="style-mobile.css">
 </head>
 <body>
 <div class="wrapper">
+    <h4>Name/ValuePair</h4>
     <input type="text" id="name" placeholder="Name=Value">
     <button id="send">send</button>
     <h4>Name/ValuePairList</h4>
+    <div class="wrapperFortextbox">
     <div id="target"></div>
-<!--<ul>-->
-<!--    <li>Delete</li>-->
-<!--</ul>-->
+        <div class="wrapperForbutton">
     <button id="buttonSortname">Sort by Name</button>
     <button id="buttonSortvalue">Sort by Value</button>
     <button id="buttonDelete">Delete</button>
-
-
+    </div>
+</div>
 </div>
 <script src="main.js"></script>
 </body>
